# blox-ai

./: .gitignore  Dockerfile  PLAYBOOK.md  README.md  _commit_msg_c5_c6_c7.txt  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build-publish.yml  pytest.yml
src/: app.py
src/routes/: cancel.py  classify.py  diag.py  execute.py  feedback.py  health.py  pending.py  support.py  troubleshoot.py
src/runtime/: mock_backend.py  mock_diag.py  rkllm_runtime.py  runbook_frontmatter.py  runbook_loader.py  tree_dsl.py  tree_expr.py  tree_runner.py
src/schemas/: __init__.py
src/session/: manager.py  tool_call_loop.py
src/tools/: approval_token.py  audit.py  chain.py  executor.py
src/tools/diag_impls/: __init__.py  _helpers.py  ble_state.py  containers.py  discovery_state.py  events.py  fula_go_health.py  heartbeat.py  identity_health.py  image_versions.py  internet.py  kubo_health.py  network_interface.py  plugins.py  power.py  readiness.py  relay.py  storage.py  summary.py  systemd_services.py  time_.py  uniondrive.py  wireguard.py
tests/: conftest.py  test_approval_token.py  test_audit.py  test_c6_routes.py  test_c6_runbook_reload.py  test_chain.py  test_classify.py  test_diag_bundle.py  test_diag_impls.py  test_diag_routes.py  test_execute_route.py  test_executor.py  test_health.py  test_rkllm_runtime.py  test_schema_loader.py  test_session_manager.py  test_support_route.py  test_tree_dsl.py  test_tree_expr.py  test_tree_runner.py  test_trees_yaml.py  test_troubleshoot_conversational.py  test_troubleshoot_sse.py  test_troubleshoot_tree.py
